issue with "white-space: nowrap;"

--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -35,6 +35,7 @@
             .epsisodeDetail {
                 flex: 1;
                 margin-left: 1rem;
+                min-width: 0;
 
                 a {
                     display: block;
@@ -43,7 +44,7 @@
                     font-weight: 600;
                     text-decoration: none;
                     line-height:  1.4rem;
-
+                    
                     &:hover {
                         text-decoration: underline;
                     }
@@ -54,7 +55,7 @@
                     margin-top: 0.5rem;
                     max-width: 60%;
                     overflow: hidden;
-                    white-space: nowrap;
+                    /* white-space: nowrap; */
                     text-overflow: ellipsis;
                 }
 
